update - contact - fix toolbar layout bug

--- a/src/contact/shared/toolbar/toolbar.component.scss
+++ b/src/contact/shared/toolbar/toolbar.component.scss
@@ -11,6 +11,10 @@
   }
 }
 
+.toolbar-title {
+  display: inline-block;
+}
+
 .select-all-cb {
   background-color: #F2F2F2;
   i {
